lib/dataformat/dbsql/sql.output
Grammar

    0 $accept: sql_list $end

    1 sql_list: sql ';'
    2         | sql_list sql ';'

    3 sql: schema

    4 schema: CREATE SCHEMA AUTHORIZATION user opt_schema_element_list

    5 opt_schema_element_list: /* empty */
    6                        | schema_element_list

    7 schema_element_list: schema_element
    8                    | schema_element_list schema_element

    9 schema_element: base_table_def
   10               | view_def
   11               | privilege_def

   12 base_table_def: CREATE TABLE table '(' base_table_element_commalist ')'

   13 base_table_element_commalist: base_table_element
   14                             | base_table_element_commalist ',' base_table_element

   15 base_table_element: column_def
   16                   | table_constraint_def

   17 column_def: column data_type column_def_opt_list

   18 column_def_opt_list: /* empty */
   19                    | column_def_opt_list column_def_opt

   20 column_def_opt: NOT NULLX
   21               | NOT NULLX UNIQUE
   22               | NOT NULLX PRIMARY KEY
   23               | DEFAULT literal
   24               | DEFAULT NULLX
   25               | DEFAULT USER
   26               | CHECK '(' search_condition ')'
   27               | REFERENCES table
   28               | REFERENCES table '(' column_commalist ')'

   29 table_constraint_def: UNIQUE '(' column_commalist ')'
   30                     | PRIMARY KEY '(' column_commalist ')'
   31                     | FOREIGN KEY '(' column_commalist ')' REFERENCES table
   32                     | FOREIGN KEY '(' column_commalist ')' REFERENCES table '(' column_commalist ')'
   33                     | CHECK '(' search_condition ')'

   34 column_commalist: column
   35                 | column_commalist ',' column

   36 view_def: CREATE VIEW table opt_column_commalist AS query_spec opt_with_check_option

   37 opt_with_check_option: /* empty */
   38                      | WITH CHECK OPTION

   39 opt_column_commalist: /* empty */
   40                     | '(' column_commalist ')'

   41 privilege_def: GRANT privileges ON table TO grantee_commalist opt_with_grant_option

   42 opt_with_grant_option: /* empty */
   43                      | WITH GRANT OPTION

   44 privileges: ALL PRIVILEGES
   45           | ALL
   46           | operation_commalist

   47 operation_commalist: operation
   48                    | operation_commalist ',' operation

   49 operation: SELECT
   50          | INSERT
   51          | DELETE
   52          | UPDATE opt_column_commalist
   53          | REFERENCES opt_column_commalist

   54 grantee_commalist: grantee
   55                  | grantee_commalist ',' grantee

   56 grantee: PUBLIC
   57        | user

   58 sql: module_def

   59 module_def: MODULE opt_module LANGUAGE lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

   60 opt_module: /* empty */
   61           | module

   62 lang: COBOL
   63     | FORTRAN
   64     | PASCAL
   65     | PLI
   66     | C
   67     | ADA

   68 opt_cursor_def_list: /* empty */
   69                    | cursor_def_list

   70 cursor_def_list: cursor_def
   71                | cursor_def_list cursor_def

   72 cursor_def: DECLARE cursor CURSOR FOR query_exp opt_order_by_clause

   73 opt_order_by_clause: /* empty */
   74                    | ORDER BY ordering_spec_commalist

   75 ordering_spec_commalist: ordering_spec
   76                        | ordering_spec_commalist ',' ordering_spec

   77 ordering_spec: INTNUM opt_asc_desc
   78              | column_ref opt_asc_desc

   79 opt_asc_desc: /* empty */
   80             | ASC
   81             | DESC

   82 procedure_def_list: procedure_def
   83                   | procedure_def_list procedure_def

   84 procedure_def: PROCEDURE procedure parameter_def_list ';' manipulative_statement_list

   85 manipulative_statement_list: manipulative_statement
   86                            | manipulative_statement_list manipulative_statement

   87 parameter_def_list: parameter_def
   88                   | parameter_def_list parameter_def

   89 parameter_def: parameter data_type
   90              | SQLCODE

   91 sql: manipulative_statement

   92 manipulative_statement: close_statement
   93                       | commit_statement
   94                       | delete_statement_positioned
   95                       | delete_statement_searched
   96                       | fetch_statement
   97                       | insert_statement
   98                       | open_statement
   99                       | rollback_statement
  100                       | select_statement
  101                       | update_statement_positioned
  102                       | update_statement_searched

  103 close_statement: CLOSE cursor

  104 commit_statement: COMMIT WORK

  105 delete_statement_positioned: DELETE FROM table WHERE CURRENT OF cursor

  106 delete_statement_searched: DELETE FROM table opt_where_clause

  107 fetch_statement: FETCH cursor INTO target_commalist

  108 insert_statement: INSERT INTO table opt_column_commalist values_or_query_spec

  109 values_or_query_spec: VALUES '(' insert_atom_commalist ')'
  110                     | query_spec

  111 insert_atom_commalist: insert_atom
  112                      | insert_atom_commalist ',' insert_atom

  113 insert_atom: atom
  114            | NULLX

  115 open_statement: OPEN cursor

  116 rollback_statement: ROLLBACK WORK

  117 select_statement: SELECT opt_all_distinct selection opt_into table_exp

  118 opt_into: /* empty */
  119         | INTO target_commalist

  120 opt_all_distinct: /* empty */
  121                 | ALL
  122                 | DISTINCT

  123 update_statement_positioned: UPDATE table SET assignment_commalist WHERE CURRENT OF cursor

  124 assignment_commalist: /* empty */
  125                     | assignment
  126                     | assignment_commalist ',' assignment

  127 assignment: column '=' scalar_exp
  128           | column '=' NULLX

  129 update_statement_searched: UPDATE table SET assignment_commalist opt_where_clause

  130 target_commalist: target
  131                 | target_commalist ',' target

  132 target: parameter_ref

  133 opt_where_clause: /* empty */
  134                 | where_clause

  135 query_exp: query_term
  136          | query_exp UNION query_term
  137          | query_exp UNION ALL query_term

  138 query_term: query_spec
  139           | '(' query_exp ')'

  140 query_spec: SELECT opt_all_distinct selection table_exp

  141 selection: scalar_exp_commalist
  142          | '*'

  143 table_exp: from_clause opt_where_clause opt_group_by_clause opt_having_clause

  144 from_clause: FROM table_ref_commalist

  145 table_ref_commalist: table_ref
  146                    | table_ref_commalist ',' table_ref

  147 table_ref: table
  148          | table range_variable

  149 where_clause: WHERE search_condition

  150 opt_group_by_clause: /* empty */
  151                    | GROUP BY column_ref_commalist

  152 column_ref_commalist: column_ref
  153                     | column_ref_commalist ',' column_ref

  154 opt_having_clause: /* empty */
  155                  | HAVING search_condition

  156 search_condition: /* empty */
  157                 | search_condition OR search_condition
  158                 | search_condition AND search_condition
  159                 | NOT search_condition
  160                 | '(' search_condition ')'
  161                 | predicate

  162 predicate: comparison_predicate
  163          | between_predicate
  164          | like_predicate
  165          | test_for_null
  166          | in_predicate
  167          | all_or_any_predicate
  168          | existence_test

  169 comparison_predicate: scalar_exp COMPARISON scalar_exp
  170                     | scalar_exp COMPARISON subquery

  171 between_predicate: scalar_exp NOT BETWEEN scalar_exp AND scalar_exp
  172                  | scalar_exp BETWEEN scalar_exp AND scalar_exp

  173 like_predicate: scalar_exp NOT LIKE atom opt_escape
  174               | scalar_exp LIKE atom opt_escape

  175 opt_escape: /* empty */
  176           | ESCAPE atom

  177 test_for_null: column_ref IS NOT NULLX
  178              | column_ref IS NULLX

  179 in_predicate: scalar_exp NOT IN '(' subquery ')'
  180             | scalar_exp IN '(' subquery ')'
  181             | scalar_exp NOT IN '(' atom_commalist ')'
  182             | scalar_exp IN '(' atom_commalist ')'

  183 atom_commalist: atom
  184               | atom_commalist ',' atom

  185 all_or_any_predicate: scalar_exp COMPARISON any_all_some subquery

  186 any_all_some: ANY
  187             | ALL
  188             | SOME

  189 existence_test: EXISTS subquery

  190 subquery: '(' SELECT opt_all_distinct selection table_exp ')'

  191 scalar_exp: scalar_exp '+' scalar_exp
  192           | scalar_exp '-' scalar_exp
  193           | scalar_exp '*' scalar_exp
  194           | scalar_exp '/' scalar_exp
  195           | '+' scalar_exp
  196           | '-' scalar_exp
  197           | atom
  198           | column_ref
  199           | function_ref
  200           | '(' scalar_exp ')'

  201 scalar_exp_commalist: scalar_exp
  202                     | scalar_exp_commalist ',' scalar_exp

  203 atom: parameter_ref
  204     | literal
  205     | USER

  206 parameter_ref: parameter
  207              | parameter parameter
  208              | parameter INDICATOR parameter

  209 function_ref: AMMSC '(' '*' ')'
  210             | AMMSC '(' DISTINCT column_ref ')'
  211             | AMMSC '(' ALL scalar_exp ')'
  212             | AMMSC '(' scalar_exp ')'

  213 literal: STRING
  214        | INTNUM
  215        | APPROXNUM

  216 table: NAME
  217      | NAME '.' NAME

  218 column_ref: NAME
  219           | NAME '.' NAME
  220           | NAME '.' NAME '.' NAME

  221 data_type: CHARACTER
  222          | CHARACTER '(' INTNUM ')'
  223          | NUMERIC
  224          | NUMERIC '(' INTNUM ')'
  225          | NUMERIC '(' INTNUM ',' INTNUM ')'
  226          | DECIMAL
  227          | DECIMAL '(' INTNUM ')'
  228          | DECIMAL '(' INTNUM ',' INTNUM ')'
  229          | INTEGER
  230          | SMALLINT
  231          | FLOAT
  232          | FLOAT '(' INTNUM ')'
  233          | REAL
  234          | DOUBLE PRECISION

  235 column: NAME

  236 cursor: NAME

  237 module: NAME

  238 parameter: ':' NAME

  239 procedure: NAME

  240 range_variable: NAME

  241 user: NAME

  242 sql: WHENEVER NOT FOUND when_action
  243    | WHENEVER SQLERROR when_action

  244 when_action: GOTO NAME
  245            | CONTINUE


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 26 28 29 30 31 32 33 40 109 139 160 179 180 181 182 190
    200 209 210 211 212 222 224 225 227 228 232
')' (41) 12 26 28 29 30 31 32 33 40 109 139 160 179 180 181 182 190
    200 209 210 211 212 222 224 225 227 228 232
'*' (42) 142 193 209
'+' (43) 191 195
',' (44) 14 35 48 55 76 112 126 131 146 153 184 202 225 228
'-' (45) 192 196
'.' (46) 217 219 220
'/' (47) 194
':' (58) 238
';' (59) 1 2 84
'=' (61) 127 128
error (256)
NAME (258) 216 217 218 219 220 235 236 237 238 239 240 241 244
STRING (259) 213
INTNUM (260) 77 214 222 224 225 227 228 232
APPROXNUM (261) 215
OR (262) 157
AND (263) 158 171 172
NOT (264) 20 21 22 159 171 173 177 179 181 242
COMPARISON (265) 169 170 185
UMINUS (266)
ALL (267) 44 45 121 137 187 211
AMMSC (268) 209 210 211 212
ANY (269) 186
AS (270) 36
ASC (271) 80
AUTHORIZATION (272) 4 59
BETWEEN (273) 171 172
BY (274) 74 151
CHARACTER (275) 221 222
CHECK (276) 26 33 38
CLOSE (277) 103
COMMIT (278) 104
CONTINUE (279) 245
CREATE (280) 4 12 36
CURRENT (281) 105 123
CURSOR (282) 72
DECIMAL (283) 226 227 228
DECLARE (284) 72
DEFAULT (285) 23 24 25
DELETE (286) 51 105 106
DESC (287) 81
DISTINCT (288) 122 210
DOUBLE (289) 234
ESCAPE (290) 176
EXISTS (291) 189
FETCH (292) 107
FLOAT (293) 231 232
FOR (294) 72
FOREIGN (295) 31 32
FOUND (296) 242
FROM (297) 105 106 144
GOTO (298) 244
GRANT (299) 41 43
GROUP (300) 151
HAVING (301) 155
IN (302) 179 180 181 182
INDICATOR (303) 208
INSERT (304) 50 108
INTEGER (305) 229
INTO (306) 107 108 119
IS (307) 177 178
KEY (308) 22 30 31 32
LANGUAGE (309) 59
LIKE (310) 173 174
MODULE (311) 59
NULLX (312) 20 21 22 24 114 128 177 178
NUMERIC (313) 223 224 225
OF (314) 105 123
ON (315) 41
OPEN (316) 115
OPTION (317) 38 43
ORDER (318) 74
PRECISION (319) 234
PRIMARY (320) 22 30
PRIVILEGES (321) 44
PROCEDURE (322) 84
PUBLIC (323) 56
REAL (324) 233
REFERENCES (325) 27 28 31 32 53
ROLLBACK (326) 116
SCHEMA (327) 4
SELECT (328) 49 117 140 190
SET (329) 123 129
SMALLINT (330) 230
SOME (331) 188
SQLCODE (332) 90
SQLERROR (333) 243
TABLE (334) 12
TO (335) 41
UNION (336) 136 137
UNIQUE (337) 21 29
UPDATE (338) 52 123 129
USER (339) 25 205
VALUES (340) 109
VIEW (341) 36
WHENEVER (342) 242 243
WHERE (343) 105 123 149
WITH (344) 38 43
WORK (345) 104 116
COBOL (346) 62
FORTRAN (347) 63
PASCAL (348) 64
PLI (349) 65
C (350) 66
ADA (351) 67


Nonterminals, with rules where they appear

$accept (108)
    on left: 0
sql_list (109)
    on left: 1 2, on right: 0 2
sql (110)
    on left: 3 58 91 242 243, on right: 1 2
schema (111)
    on left: 4, on right: 3
opt_schema_element_list (112)
    on left: 5 6, on right: 4
schema_element_list (113)
    on left: 7 8, on right: 6 8
schema_element (114)
    on left: 9 10 11, on right: 7 8
base_table_def (115)
    on left: 12, on right: 9
base_table_element_commalist (116)
    on left: 13 14, on right: 12 14
base_table_element (117)
    on left: 15 16, on right: 13 14
column_def (118)
    on left: 17, on right: 15
column_def_opt_list (119)
    on left: 18 19, on right: 17 19
column_def_opt (120)
    on left: 20 21 22 23 24 25 26 27 28, on right: 19
table_constraint_def (121)
    on left: 29 30 31 32 33, on right: 16
column_commalist (122)
    on left: 34 35, on right: 28 29 30 31 32 35 40
view_def (123)
    on left: 36, on right: 10
opt_with_check_option (124)
    on left: 37 38, on right: 36
opt_column_commalist (125)
    on left: 39 40, on right: 36 52 53 108
privilege_def (126)
    on left: 41, on right: 11
opt_with_grant_option (127)
    on left: 42 43, on right: 41
privileges (128)
    on left: 44 45 46, on right: 41
operation_commalist (129)
    on left: 47 48, on right: 46 48
operation (130)
    on left: 49 50 51 52 53, on right: 47 48
grantee_commalist (131)
    on left: 54 55, on right: 41 55
grantee (132)
    on left: 56 57, on right: 54 55
module_def (133)
    on left: 59, on right: 58
opt_module (134)
    on left: 60 61, on right: 59
lang (135)
    on left: 62 63 64 65 66 67, on right: 59
opt_cursor_def_list (136)
    on left: 68 69, on right: 59
cursor_def_list (137)
    on left: 70 71, on right: 69 71
cursor_def (138)
    on left: 72, on right: 70 71
opt_order_by_clause (139)
    on left: 73 74, on right: 72
ordering_spec_commalist (140)
    on left: 75 76, on right: 74 76
ordering_spec (141)
    on left: 77 78, on right: 75 76
opt_asc_desc (142)
    on left: 79 80 81, on right: 77 78
procedure_def_list (143)
    on left: 82 83, on right: 59 83
procedure_def (144)
    on left: 84, on right: 82 83
manipulative_statement_list (145)
    on left: 85 86, on right: 84 86
parameter_def_list (146)
    on left: 87 88, on right: 84 88
parameter_def (147)
    on left: 89 90, on right: 87 88
manipulative_statement (148)
    on left: 92 93 94 95 96 97 98 99 100 101 102, on right: 85 86 91
close_statement (149)
    on left: 103, on right: 92
commit_statement (150)
    on left: 104, on right: 93
delete_statement_positioned (151)
    on left: 105, on right: 94
delete_statement_searched (152)
    on left: 106, on right: 95
fetch_statement (153)
    on left: 107, on right: 96
insert_statement (154)
    on left: 108, on right: 97
values_or_query_spec (155)
    on left: 109 110, on right: 108
insert_atom_commalist (156)
    on left: 111 112, on right: 109 112
insert_atom (157)
    on left: 113 114, on right: 111 112
open_statement (158)
    on left: 115, on right: 98
rollback_statement (159)
    on left: 116, on right: 99
select_statement (160)
    on left: 117, on right: 100
opt_into (161)
    on left: 118 119, on right: 117
opt_all_distinct (162)
    on left: 120 121 122, on right: 117 140 190
update_statement_positioned (163)
    on left: 123, on right: 101
assignment_commalist (164)
    on left: 124 125 126, on right: 123 126 129
assignment (165)
    on left: 127 128, on right: 125 126
update_statement_searched (166)
    on left: 129, on right: 102
target_commalist (167)
    on left: 130 131, on right: 107 119 131
target (168)
    on left: 132, on right: 130 131
opt_where_clause (169)
    on left: 133 134, on right: 106 129 143
query_exp (170)
    on left: 135 136 137, on right: 72 136 137 139
query_term (171)
    on left: 138 139, on right: 135 136 137
query_spec (172)
    on left: 140, on right: 36 110 138
selection (173)
    on left: 141 142, on right: 117 140 190
table_exp (174)
    on left: 143, on right: 117 140 190
from_clause (175)
    on left: 144, on right: 143
table_ref_commalist (176)
    on left: 145 146, on right: 144 146
table_ref (177)
    on left: 147 148, on right: 145 146
where_clause (178)
    on left: 149, on right: 134
opt_group_by_clause (179)
    on left: 150 151, on right: 143
column_ref_commalist (180)
    on left: 152 153, on right: 151 153
opt_having_clause (181)
    on left: 154 155, on right: 143
search_condition (182)
    on left: 156 157 158 159 160 161, on right: 26 33 149 155 157 158
    159 160
predicate (183)
    on left: 162 163 164 165 166 167 168, on right: 161
comparison_predicate (184)
    on left: 169 170, on right: 162
between_predicate (185)
    on left: 171 172, on right: 163
like_predicate (186)
    on left: 173 174, on right: 164
opt_escape (187)
    on left: 175 176, on right: 173 174
test_for_null (188)
    on left: 177 178, on right: 165
in_predicate (189)
    on left: 179 180 181 182, on right: 166
atom_commalist (190)
    on left: 183 184, on right: 181 182 184
all_or_any_predicate (191)
    on left: 185, on right: 167
any_all_some (192)
    on left: 186 187 188, on right: 185
existence_test (193)
    on left: 189, on right: 168
subquery (194)
    on left: 190, on right: 170 179 180 185 189
scalar_exp (195)
    on left: 191 192 193 194 195 196 197 198 199 200,
    on right: 127 169 170 171 172 173 174 179 180 181 182 185 191 192
    193 194 195 196 200 201 202 211 212
scalar_exp_commalist (196)
    on left: 201 202, on right: 141 202
atom (197)
    on left: 203 204 205, on right: 113 173 174 176 183 184 197
parameter_ref (198)
    on left: 206 207 208, on right: 132 203
function_ref (199)
    on left: 209 210 211 212, on right: 199
literal (200)
    on left: 213 214 215, on right: 23 204
table (201)
    on left: 216 217, on right: 12 27 28 31 32 36 41 105 106 108 123
    129 147 148
column_ref (202)
    on left: 218 219 220, on right: 78 152 153 177 178 198 210
data_type (203)
    on left: 221 222 223 224 225 226 227 228 229 230 231 232 233 234
   , on right: 17 89
column (204)
    on left: 235, on right: 17 34 35 127 128
cursor (205)
    on left: 236, on right: 72 103 105 107 115 123
module (206)
    on left: 237, on right: 61
parameter (207)
    on left: 238, on right: 89 206 207 208
procedure (208)
    on left: 239, on right: 84
range_variable (209)
    on left: 240, on right: 148
user (210)
    on left: 241, on right: 4 57 59
when_action (211)
    on left: 244 245, on right: 242 243


state 0

    0 $accept: . sql_list $end

    CLOSE     shift, and go to state 1
    COMMIT    shift, and go to state 2
    CREATE    shift, and go to state 3
    DELETE    shift, and go to state 4
    FETCH     shift, and go to state 5
    INSERT    shift, and go to state 6
    MODULE    shift, and go to state 7
    OPEN      shift, and go to state 8
    ROLLBACK  shift, and go to state 9
    SELECT    shift, and go to state 10
    UPDATE    shift, and go to state 11
    WHENEVER  shift, and go to state 12

    sql_list                     go to state 13
    sql                          go to state 14
    schema                       go to state 15
    module_def                   go to state 16
    manipulative_statement       go to state 17
    close_statement              go to state 18
    commit_statement             go to state 19
    delete_statement_positioned  go to state 20
    delete_statement_searched    go to state 21
    fetch_statement              go to state 22
    insert_statement             go to state 23
    open_statement               go to state 24
    rollback_statement           go to state 25
    select_statement             go to state 26
    update_statement_positioned  go to state 27
    update_statement_searched    go to state 28


state 1

  103 close_statement: CLOSE . cursor

    NAME  shift, and go to state 29

    cursor  go to state 30


state 2

  104 commit_statement: COMMIT . WORK

    WORK  shift, and go to state 31


state 3

    4 schema: CREATE . SCHEMA AUTHORIZATION user opt_schema_element_list

    SCHEMA  shift, and go to state 32


state 4

  105 delete_statement_positioned: DELETE . FROM table WHERE CURRENT OF cursor
  106 delete_statement_searched: DELETE . FROM table opt_where_clause

    FROM  shift, and go to state 33


state 5

  107 fetch_statement: FETCH . cursor INTO target_commalist

    NAME  shift, and go to state 29

    cursor  go to state 34


state 6

  108 insert_statement: INSERT . INTO table opt_column_commalist values_or_query_spec

    INTO  shift, and go to state 35


state 7

   59 module_def: MODULE . opt_module LANGUAGE lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

    NAME  shift, and go to state 36

    $default  reduce using rule 60 (opt_module)

    opt_module  go to state 37
    module      go to state 38


state 8

  115 open_statement: OPEN . cursor

    NAME  shift, and go to state 29

    cursor  go to state 39


state 9

  116 rollback_statement: ROLLBACK . WORK

    WORK  shift, and go to state 40


state 10

  117 select_statement: SELECT . opt_all_distinct selection opt_into table_exp

    ALL       shift, and go to state 41
    DISTINCT  shift, and go to state 42

    $default  reduce using rule 120 (opt_all_distinct)

    opt_all_distinct  go to state 43


state 11

  123 update_statement_positioned: UPDATE . table SET assignment_commalist WHERE CURRENT OF cursor
  129 update_statement_searched: UPDATE . table SET assignment_commalist opt_where_clause

    NAME  shift, and go to state 44

    table  go to state 45


state 12

  242 sql: WHENEVER . NOT FOUND when_action
  243    | WHENEVER . SQLERROR when_action

    NOT       shift, and go to state 46
    SQLERROR  shift, and go to state 47


state 13

    0 $accept: sql_list . $end
    2 sql_list: sql_list . sql ';'

    $end      shift, and go to state 48
    CLOSE     shift, and go to state 1
    COMMIT    shift, and go to state 2
    CREATE    shift, and go to state 3
    DELETE    shift, and go to state 4
    FETCH     shift, and go to state 5
    INSERT    shift, and go to state 6
    MODULE    shift, and go to state 7
    OPEN      shift, and go to state 8
    ROLLBACK  shift, and go to state 9
    SELECT    shift, and go to state 10
    UPDATE    shift, and go to state 11
    WHENEVER  shift, and go to state 12

    sql                          go to state 49
    schema                       go to state 15
    module_def                   go to state 16
    manipulative_statement       go to state 17
    close_statement              go to state 18
    commit_statement             go to state 19
    delete_statement_positioned  go to state 20
    delete_statement_searched    go to state 21
    fetch_statement              go to state 22
    insert_statement             go to state 23
    open_statement               go to state 24
    rollback_statement           go to state 25
    select_statement             go to state 26
    update_statement_positioned  go to state 27
    update_statement_searched    go to state 28


state 14

    1 sql_list: sql . ';'

    ';'  shift, and go to state 50


state 15

    3 sql: schema .

    $default  reduce using rule 3 (sql)


state 16

   58 sql: module_def .

    $default  reduce using rule 58 (sql)


state 17

   91 sql: manipulative_statement .

    $default  reduce using rule 91 (sql)


state 18

   92 manipulative_statement: close_statement .

    $default  reduce using rule 92 (manipulative_statement)


state 19

   93 manipulative_statement: commit_statement .

    $default  reduce using rule 93 (manipulative_statement)


state 20

   94 manipulative_statement: delete_statement_positioned .

    $default  reduce using rule 94 (manipulative_statement)


state 21

   95 manipulative_statement: delete_statement_searched .

    $default  reduce using rule 95 (manipulative_statement)


state 22

   96 manipulative_statement: fetch_statement .

    $default  reduce using rule 96 (manipulative_statement)


state 23

   97 manipulative_statement: insert_statement .

    $default  reduce using rule 97 (manipulative_statement)


state 24

   98 manipulative_statement: open_statement .

    $default  reduce using rule 98 (manipulative_statement)


state 25

   99 manipulative_statement: rollback_statement .

    $default  reduce using rule 99 (manipulative_statement)


state 26

  100 manipulative_statement: select_statement .

    $default  reduce using rule 100 (manipulative_statement)


state 27

  101 manipulative_statement: update_statement_positioned .

    $default  reduce using rule 101 (manipulative_statement)


state 28

  102 manipulative_statement: update_statement_searched .

    $default  reduce using rule 102 (manipulative_statement)


state 29

  236 cursor: NAME .

    $default  reduce using rule 236 (cursor)


state 30

  103 close_statement: CLOSE cursor .

    $default  reduce using rule 103 (close_statement)


state 31

  104 commit_statement: COMMIT WORK .

    $default  reduce using rule 104 (commit_statement)


state 32

    4 schema: CREATE SCHEMA . AUTHORIZATION user opt_schema_element_list

    AUTHORIZATION  shift, and go to state 51


state 33

  105 delete_statement_positioned: DELETE FROM . table WHERE CURRENT OF cursor
  106 delete_statement_searched: DELETE FROM . table opt_where_clause

    NAME  shift, and go to state 44

    table  go to state 52


state 34

  107 fetch_statement: FETCH cursor . INTO target_commalist

    INTO  shift, and go to state 53


state 35

  108 insert_statement: INSERT INTO . table opt_column_commalist values_or_query_spec

    NAME  shift, and go to state 44

    table  go to state 54


state 36

  237 module: NAME .

    $default  reduce using rule 237 (module)


state 37

   59 module_def: MODULE opt_module . LANGUAGE lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

    LANGUAGE  shift, and go to state 55


state 38

   61 opt_module: module .

    $default  reduce using rule 61 (opt_module)


state 39

  115 open_statement: OPEN cursor .

    $default  reduce using rule 115 (open_statement)


state 40

  116 rollback_statement: ROLLBACK WORK .

    $default  reduce using rule 116 (rollback_statement)


state 41

  121 opt_all_distinct: ALL .

    $default  reduce using rule 121 (opt_all_distinct)


state 42

  122 opt_all_distinct: DISTINCT .

    $default  reduce using rule 122 (opt_all_distinct)


state 43

  117 select_statement: SELECT opt_all_distinct . selection opt_into table_exp

    NAME       shift, and go to state 56
    STRING     shift, and go to state 57
    INTNUM     shift, and go to state 58
    APPROXNUM  shift, and go to state 59
    '+'        shift, and go to state 60
    '-'        shift, and go to state 61
    '*'        shift, and go to state 62
    AMMSC      shift, and go to state 63
    USER       shift, and go to state 64
    '('        shift, and go to state 65
    ':'        shift, and go to state 66

    selection             go to state 67
    scalar_exp            go to state 68
    scalar_exp_commalist  go to state 69
    atom                  go to state 70
    parameter_ref         go to state 71
    function_ref          go to state 72
    literal               go to state 73
    column_ref            go to state 74
    parameter             go to state 75


state 44

  216 table: NAME .
  217      | NAME . '.' NAME

    '.'  shift, and go to state 76

    $default  reduce using rule 216 (table)


state 45

  123 update_statement_positioned: UPDATE table . SET assignment_commalist WHERE CURRENT OF cursor
  129 update_statement_searched: UPDATE table . SET assignment_commalist opt_where_clause

    SET  shift, and go to state 77


state 46

  242 sql: WHENEVER NOT . FOUND when_action

    FOUND  shift, and go to state 78


state 47

  243 sql: WHENEVER SQLERROR . when_action

    CONTINUE  shift, and go to state 79
    GOTO      shift, and go to state 80

    when_action  go to state 81


state 48

    0 $accept: sql_list $end .

    $default  accept


state 49

    2 sql_list: sql_list sql . ';'

    ';'  shift, and go to state 82


state 50

    1 sql_list: sql ';' .

    $default  reduce using rule 1 (sql_list)


state 51

    4 schema: CREATE SCHEMA AUTHORIZATION . user opt_schema_element_list

    NAME  shift, and go to state 83

    user  go to state 84


state 52

  105 delete_statement_positioned: DELETE FROM table . WHERE CURRENT OF cursor
  106 delete_statement_searched: DELETE FROM table . opt_where_clause

    WHERE  shift, and go to state 85

    $default  reduce using rule 133 (opt_where_clause)

    opt_where_clause  go to state 86
    where_clause      go to state 87


state 53

  107 fetch_statement: FETCH cursor INTO . target_commalist

    ':'  shift, and go to state 66

    target_commalist  go to state 88
    target            go to state 89
    parameter_ref     go to state 90
    parameter         go to state 75


state 54

  108 insert_statement: INSERT INTO table . opt_column_commalist values_or_query_spec

    '('  shift, and go to state 91

    $default  reduce using rule 39 (opt_column_commalist)

    opt_column_commalist  go to state 92


state 55

   59 module_def: MODULE opt_module LANGUAGE . lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

    COBOL    shift, and go to state 93
    FORTRAN  shift, and go to state 94
    PASCAL   shift, and go to state 95
    PLI      shift, and go to state 96
    C        shift, and go to state 97
    ADA      shift, and go to state 98

    lang  go to state 99


state 56

  218 column_ref: NAME .
  219           | NAME . '.' NAME
  220           | NAME . '.' NAME '.' NAME

    '.'  shift, and go to state 100

    $default  reduce using rule 218 (column_ref)


state 57

  213 literal: STRING .

    $default  reduce using rule 213 (literal)


state 58

  214 literal: INTNUM .

    $default  reduce using rule 214 (literal)


state 59

  215 literal: APPROXNUM .

    $default  reduce using rule 215 (literal)


state 60

  195 scalar_exp: '+' . scalar_exp

    NAME       shift, and go to state 56
    STRING     shift, and go to state 57
    INTNUM     shift, and go to state 58
    APPROXNUM  shift, and go to state 59
    '+'        shift, and go to state 60
    '-'        shift, and go to state 61
    AMMSC      shift, and go to state 63
    USER       shift, and go to state 64
    '('        shift, and go to state 65
    ':'        shift, and go to state 66

    scalar_exp     go to state 101
    atom           go to state 70
    parameter_ref  go to state 71
    function_ref   go to state 72
    literal        go to state 73
    column_ref     go to state 74
    parameter      go to state 75


state 61

  196 scalar_exp: '-' . scalar_exp

    NAME       shift, and go to state 56
    STRING     shift, and go to state 57
    INTNUM     shift, and go to state 58
    APPROXNUM  shift, and go to state 59
    '+'        shift, and go to state 60
    '-'        shift, and go to state 61
    AMMSC      shift, and go to state 63
    USER       shift, and go to state 64
    '('        shift, and go to state 65
    ':'        shift, and go to state 66

    scalar_exp     go to state 102
    atom           go to state 70
    parameter_ref  go to state 71
    function_ref   go to state 72
    literal        go to state 73
    column_ref     go to state 74
    parameter      go to state 75


state 62

  142 selection: '*' .

    $default  reduce using rule 142 (selection)


state 63

  209 function_ref: AMMSC . '(' '*' ')'
  210             | AMMSC . '(' DISTINCT column_ref ')'
  211             | AMMSC . '(' ALL scalar_exp ')'
  212             | AMMSC . '(' scalar_exp ')'

    '('  shift, and go to state 103


state 64

  205 atom: USER .

    $default  reduce using rule 205 (atom)


state 65

  200 scalar_exp: '(' . scalar_exp ')'

    NAME       shift, and go to state 56
    STRING     shift, and go to state 57
    INTNUM     shift, and go to state 58
    APPROXNUM  shift, and go to state 59
    '+'        shift, and go to state 60
    '-'        shift, and go to state 61
    AMMSC      shift, and go to state 63
    USER       shift, and go to state 64
    '('        shift, and go to state 65
    ':'        shift, and go to state 66

    scalar_exp     go to state 104
    atom           go to state 70
    parameter_ref  go to state 71
    function_ref   go to state 72
    literal        go to state 73
    column_ref     go to state 74
    parameter      go to state 75


state 66

  238 parameter: ':' . NAME

    NAME  shift, and go to state 105


state 67

  117 select_statement: SELECT opt_all_distinct selection . opt_into table_exp

    INTO  shift, and go to state 106

    $default  reduce using rule 118 (opt_into)

    opt_into  go to state 107


state 68

  191 scalar_exp: scalar_exp . '+' scalar_exp
  192           | scalar_exp . '-' scalar_exp
  193           | scalar_exp . '*' scalar_exp
  194           | scalar_exp . '/' scalar_exp
  201 scalar_exp_commalist: scalar_exp .

    '+'  shift, and go to state 108
    '-'  shift, and go to state 109
    '*'  shift, and go to state 110
    '/'  shift, and go to state 111

    $default  reduce using rule 201 (scalar_exp_commalist)


state 69

  141 selection: scalar_exp_commalist .
  202 scalar_exp_commalist: scalar_exp_commalist . ',' scalar_exp

    ','  shift, and go to state 112

    $default  reduce using rule 141 (selection)


state 70

  197 scalar_exp: atom .

    $default  reduce using rule 197 (scalar_exp)


state 71

  203 atom: parameter_ref .

    $default  reduce using rule 203 (atom)


state 72

  199 scalar_exp: function_ref .

    $default  reduce using rule 199 (scalar_exp)


state 73

  204 atom: literal .

    $default  reduce using rule 204 (atom)


state 74

  198 scalar_exp: column_ref .

    $default  reduce using rule 198 (scalar_exp)


state 75

  206 parameter_ref: parameter .
  207              | parameter . parameter
  208              | parameter . INDICATOR parameter

    INDICATOR  shift, and go to state 113
    ':'        shift, and go to state 66

    $default  reduce using rule 206 (parameter_ref)

    parameter  go to state 114


state 76

  217 table: NAME '.' . NAME

    NAME  shift, and go to state 115


state 77

  123 update_statement_positioned: UPDATE table SET . assignment_commalist WHERE CURRENT OF cursor
  129 update_statement_searched: UPDATE table SET . assignment_commalist opt_where_clause
